update pom and readme
add git commit, checkstyle, formatter, spotbug, license and failsafe
plugin. update surefire with tree-reporter